--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-networkx==3.1
-numpy==1.24.3
-scikit_learn==1.2.0
-tokenizers==0.13.3
-torch==2.0.1
-torch_geometric==2.3.1
-tqdm==4.64.1
+networkx
+numpy
+scikit_learn
+tokenizers
+torch
+torch_geometric
+tqdm
 pydot
